# kic

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
script/: Gemfile  README.txt  blackbox_test.sh
script/test/: helper.rb  sample_test.rb  test_burn.rb  test_config.rb  test_cron.rb  test_helper.rb  test_ignore.rb  test_init_and_destroy.rb  test_start_and_end.rb  test_sweep.rb
src/: command.rs  constant.rs  constants.rs  error.rs  main.rs
src/command/: burn.rs  config.rs  destroy.rs  end.rs  ignore.rs  init.rs  mod.rs  patrol.rs  set.rs  start.rs  sweep.rs  version.rs
src/lib/: cmd_helper.rs  command.rs  config.rs  fs.rs  fs_helper.rs  ignore.rs  io.rs  mod.rs  setting.rs  util.rs
src/lib/setting/: config.rs  cron.rs  ignore.rs  mod.rs  storage.rs
tools/: make_dusts.sh
